[tool.poetry]
name = "brokers"
version = "0.1.0"
description = ""
authors = ["Travis Cammack <traviscammack@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.25.2"
pydantic = "^2.1.1"
python-lsp-black = "^1.3.0"
pyls-isort = "^0.2.2"
tenacity = "^8.2.2"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
